# c-attention

./: .gitignore  README.md  setup.cfg
.buildkite/: pipeline.yml
cattention/: __init__.py  math.py
tests/: test_basic.py
