[metadata]
name = cattention
version = 0.1.0
author = Your Name
description = A toy attention module
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/QiliangCui/c-attention
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.8